WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25238
REGRESSION: Scrollbar hot-tracking drawn incorrectly
https://bugs.webkit.org/show_bug.cgi?id=25238
Summary
REGRESSION: Scrollbar hot-tracking drawn incorrectly
Peter Kasting
Reported
2009-04-16 10:41:10 PDT
Go to a page with a vertical scrollbar (I use news.google.com). Click once in the track just below the thumb. Note that only half of the thumb is drawn hot. This regressed some time before February 20, 2009 (that was the date I filed this for Chromium).
Attachments
patch v1
(1.87 KB, patch)
2009-04-16 11:36 PDT
,
Peter Kasting
adele
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Peter Kasting
Comment 1
2009-04-16 11:31:28 PDT
I have a fix for this locally.
Peter Kasting
Comment 2
2009-04-16 11:36:06 PDT
Created
attachment 29540
[details]
patch v1 Because we don't draw a hovered state if there's a pressed part, we need to make sure we invalidate any hovered part when we reset the pressed part, so that it can begin drawing its hovered state correctly. (The "half the thumb is hot" effect from before was due to the way the track and thumb rects overlap, since we were invalidating a track piece.)
Peter Kasting
Comment 3
2009-04-17 13:42:35 PDT
Fixed in
r42624
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug