2009-04-16  Peter Kasting  <pkasting@google.com>

Reviewed by Adele Peterson.

        https://bugs.webkit.org/show_bug.cgi?id=25238
        Invalidate the hovered scrollbar part when resetting the pressed part,
        since once there is no pressed part we can draw a hovered state.

        * platform/Scrollbar.cpp:
        (WebCore::Scrollbar::setHoveredPart):
        (WebCore::Scrollbar::setPressedPart):



Canonical link: https://commits.webkit.org/34676@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@42624 268f45cc-cd09-0410-ab3c-d52691b4dbfc